methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:27: error: not found: value brusUp
    brusUp()
    ^